fixing more stuff